# bio-shield

./: README.md  package-lock.json
.github/workflows/: backend.yml  frontend.yml  prod.yml
backend/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/project/: settings.py  urls.py
backend/project/recognition/: apps.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
backend/project/recognition/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_alter_user_table.py
backend/project/toxins/: apps.py  choices.py  models.py  serializers.py  urls.py  views.py
backend/project/toxins/migrations/: 0001_initial.py  0002_toxin_created_at_toxin_updated_at.py
backend/recognition/: models.py  repositories.py  serializers.py  services.py  urls.py  views.py
backend/recognition/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
frontend/bio-shield/: index.html  package-lock.json  package.json
frontend/bio-shield/src/: App.css  App.jsx  App.tsx  index.css
frontend/bio-shield/src/pages/: Nivel3.tsx
frontend/src/: App.tsx
frontend/src/components/data-table/: columns.tsx  data-table-column-header.tsx  data-table-pagination.tsx  data-table-row-actions.tsx  data-table-toolbar.tsx  data-table-view-options.tsx  (+1 more)
frontend/src/contexts/: AuthContext.tsx
frontend/src/data/: classification.ts
frontend/src/pages/: Auth.tsx  Home.tsx  Nivel1.tsx  Nivel2.tsx  Nivel3.tsx  Toxin.tsx
frontend/src/schemas/: toxin-schema.ts  user-schema.ts
(+11 files in other folders)
