[tool.poetry]
name = "bio-shield"
version = "0.1.0"
description = ""
authors = ["Rafael Ferreira Machado <rafaelf.machado2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^23.0.0"
face-recognition = "^1.3.0"
django-cors-headers = "^4.5.0"
django-filter = "^24.3"
drf-yasg = "^1.21.8"
dlib = "^19.24.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
